fix(table): remove unnecessary paddings for end aligned table headers

--- a/packages/angular/src/table/head/ai-table-head-cell.scss
+++ b/packages/angular/src/table/head/ai-table-head-cell.scss
@@ -27,18 +27,6 @@
   }
 }
 
-.table-head-cell-icons {
-  right: 0;
-  margin-right: 10px;
-}
-
 .bx--table-sort.bx--table-sort--active .bx--table-sort__icon {
   top: 16px;
-}
-
-.sc-table {
-  .bx--table-header-label,
-  .table-head-cell-text {
-    padding-left: 16px;
-  }
 }
