--- a/packages/react/src/components/DataTable/_data-table.scss
+++ b/packages/react/src/components/DataTable/_data-table.scss
@@ -22,7 +22,6 @@
     }
     .#{$prefix}--table-sort {
       justify-content: flex-end;
-      padding-right: 0 !important;
     }
   }
 }
