--- a/packages/styles/src/components/DataTable/_data-table.scss
+++ b/packages/styles/src/components/DataTable/_data-table.scss
@@ -22,8 +22,6 @@
     }
     .#{$prefix}--table-sort {
       justify-content: flex-end;
-      padding-right: 0 !important;
-      padding-left: $spacing-05;
     }
   }
 }
